--- a/internal/web/home-view.html
+++ b/internal/web/home-view.html
@@ -1,23 +1,23 @@
-<h2>Discovered Hosts</h2>
+<h2 class="text-xl font-semibold mb-3 text-desert-fg">Discovered Hosts</h2>
 <div class="host-list">
-    <table>
+    <table class="min-w-full bg-desert-darkgray shadow-lg rounded overflow-hidden border border-desert-gray">
         <thead>
-            <tr>
-                <th>Hostname</th>
-                <th>IP Address</th>
-                <th>Version</th>
-                <th>Status</th>
-                <th>Actions</th>
+            <tr class="bg-desert-gray text-left text-desert-tan text-sm">
+                <th class="px-4 py-3">Hostname</th>
+                <th class="px-4 py-3">IP Address</th>
+                <th class="px-4 py-3">Version</th>
+                <th class="px-4 py-3">Status</th>
+                <th class="px-4 py-3">Actions</th>
             </tr>
         </thead>
-        <tbody>
+        <tbody class="divide-y divide-desert-gray">
             {{range .Hosts}}
             <tr>
-                <td><a hx-get="/views/host?host={{.IPAddress}}" hx-target="#content-area" hx-push-url="/?host={{.IPAddress}}">{{.Hostname}}</a></td>
-                <td>{{.IPAddress}}</td>
-                <td>{{.AnthiasVersion}}</td>
-                <td>{{.AnthiasStatus}}</td>
-                <td><a href="/api/hosts?host={{.IPAddress}}" target="_blank">API</a></td>
+                <td class="px-4 py-2"><a class="text-desert-cyan hover:text-desert-yellow cursor-pointer" hx-get="/views/host?host={{.IPAddress}}" hx-target="#content-area" hx-push-url="/?host={{.IPAddress}}">{{.Hostname}}</a></td>
+                <td class="px-4 py-2 text-desert-tan">{{.IPAddress}}</td>
+                <td class="px-4 py-2 text-desert-tan">{{.AnthiasVersion}}</td>
+                <td class="px-4 py-2 text-desert-tan">{{.AnthiasStatus}}</td>
+                <td class="px-4 py-2"><a class="text-desert-cyan hover:text-desert-yellow cursor-pointer" href="/api/hosts?host={{.IPAddress}}" target="_blank">API</a></td>
             </tr>
             {{end}}
         </tbody>
