--- a/internal/web/layout.html
+++ b/internal/web/layout.html
@@ -1,91 +1,55 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="dark">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>nexSign mini Dashboard</title>
     <script src="/static/htmx.min.js" defer></script>
+    <!-- Tailwind CSS via CDN (sufficient for dev/test; swap to compiled CSS for prod if needed) -->
+    <script src="https://cdn.tailwindcss.com"></script>
+    <script>
+        tailwind.config = {
+            darkMode: 'class',
+            theme: {
+                extend: {
+                    colors: {
+                        desert: {
+                            bg: '#333333',
+                            fg: '#ffffff',
+                            tan: '#cfbfad',
+                            yellow: '#ffd700',
+                            orange: '#ffa500',
+                            red: '#cd5c5c',
+                            green: '#98fb98',
+                            cyan: '#87ceeb',
+                            gray: '#808080',
+                            darkgray: '#4d4d4d',
+                        }
+                    }
+                }
+            }
+        }
+    </script>
     <style>
-        body, html {
-            margin: 0;
-            padding: 0;
-            height: 100%;
-            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
-            display: flex;
-            flex-direction: column;
-            background-color: #f0f2f5;
-        }
-        .top-nav {
-            width: 100%;
-            background-color: #fff;
-            padding: 0 20px;
-            box-sizing: border-box;
-            flex-shrink: 0;
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-            border-bottom: 1px solid #ddd;
-            height: 50px;
-        }
-        .breadcrumbs {
-            display: flex;
-            align-items: center;
-        }
-        .breadcrumbs a {
-            color: #007bff;
-            text-decoration: none;
-            padding: 8px 0;
-            cursor: pointer;
-        }
-        .breadcrumbs a:hover {
-            text-decoration: underline;
-        }
-        .breadcrumbs span {
-            margin: 0 10px;
-            color: #888;
-        }
-        .content {
-            flex-grow: 1;
-            padding: 20px;
-        }
-        iframe {
-            border: none;
-            width: 100%;
-            height: 100%;
-            background-color: #fff;
-        }
-        .host-list table {
-            width: 100%;
-            border-collapse: collapse;
-            background-color: #fff;
-            box-shadow: 0 1px 3px rgba(0,0,0,0.1);
-        }
-        .host-list th, .host-list td {
-            padding: 12px 15px;
-            border-bottom: 1px solid #ddd;
-            text-align: left;
-        }
-        .host-list th {
-            background-color: #f8f9fa;
-        }
-        .host-list a {
-            color: #007bff;
-            text-decoration: none;
-            cursor: pointer;
-        }
+        /* Minimal custom styles kept for iframe sizing */
+        html, body { height: 100%; }
+        iframe { border: none; width: 100%; height: 100%; background-color: #333; }
+        a { cursor: pointer; }
     </style>
 </head>
-<body>
+<body class="min-h-screen flex flex-col bg-desert-bg text-desert-tan">
 
-    <nav class="top-nav">
-        <div class="breadcrumbs">
-            <a hx-get="/views/home" hx-target="#content-area" hx-push-url="/">Home</a>
-            <!-- Breadcrumb will be managed by the view templates -->
+    <nav class="w-full bg-desert-darkgray border-b border-desert-gray h-14 px-4 flex items-center justify-between">
+        <div class="breadcrumbs flex items-center gap-2 text-sm">
+            <a class="text-desert-yellow hover:text-desert-orange py-2 cursor-pointer" hx-get="/views/home" hx-target="#content-area" hx-push-url="/">Home</a>
+            <span class="text-desert-gray">/</span>
+            <a class="text-desert-yellow hover:text-desert-orange py-2 cursor-pointer" hx-get="/views/advanced" hx-target="#content-area" hx-push-url="/advanced">Advanced</a>
         </div>
+        <div class="text-xs text-desert-gray select-none">nexSign mini</div>
     </nav>
 
     <!-- This is the main content area that HTMX will update -->
-    <div id="content-area" class="content" hx-get="/views/home" hx-trigger="load">
+    <div id="content-area" class="flex-1 p-4" hx-get="/views/home" hx-trigger="load">
         <!-- Initial content (like a loading spinner) could go here -->
     </div>
 
