feat: Add 'stale' status for hosts needing nsm updates
Adds StatusStale constant for hosts that need nsm binary updates.
In production, stale hosts will be updated via apt (apt update && apt upgrade).

Changes:
- Added StatusStale constant to HostStatus type
- Updated CheckAllHosts() to preserve manually set 'stale' status
- Stale hosts still get CMS status checked but nsm status is not overridden
- Added purple indicator and "Stale" label in dashboard UI
- Positioned stale status check before healthy status for proper priority

This allows manual marking of hosts that need updates while maintaining
automated health checking for other status states.

--- a/internal/web/home-view.html
+++ b/internal/web/home-view.html
@@ -43,6 +43,9 @@
                         {{if eq .Status "healthy"}}
                         <span class="w-2 h-2 rounded-full bg-green-500" title="Healthy"></span>
                         <span class="text-green-400">Healthy</span>
+                        {{else if eq .Status "stale"}}
+                        <span class="w-2 h-2 rounded-full bg-purple-500" title="Stale - Update Required"></span>
+                        <span class="text-purple-400">Stale</span>
                         {{else if eq .Status "unhealthy"}}
                         <span class="w-2 h-2 rounded-full bg-yellow-500" title="Unhealthy"></span>
                         <span class="text-yellow-400">Unhealthy</span>
