--- a/internal/web/layout.html
+++ b/internal/web/layout.html
@@ -45,6 +45,7 @@
             <span class="text-desert-gray">/</span>
             <a class="text-desert-yellow hover:text-desert-orange py-2 cursor-pointer" hx-get="/views/advanced" hx-target="#content-area" hx-push-url="/advanced">Advanced</a>
         </div>
+        <div class="text-lg font-semibold text-desert-cyan">NSM Dashboard</div>
         <div class="text-xs text-desert-gray select-none">nexSign mini</div>
     </nav>
 
