major update to switch to datastar from htmx. adding autodescrovery functionality

--- a/internal/web/layout.html
+++ b/internal/web/layout.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>nexSign mini Dashboard</title>
-    <script src="/static/htmx.min.js" defer></script>
+    <script type="module" src="https://cdn.jsdelivr.net/gh/starfederation/datastar@v1.0.0-beta.1/bundles/datastar.js"></script>
     <!-- Tailwind CSS via CDN (sufficient for dev/test; swap to compiled CSS for prod if needed) -->
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
